# Practise-CPP

./: .clang-format  .clang-tidy  1109.cpp  CMakeLists.txt  main.cpp
